# opensearch-agent

./: .gitignore  .gitmodules  Dockerfile  pyproject.toml
.github/workflows/: build_agent.yaml  deploy.yaml  deploy_pipeline.yaml  release_pipeline.yaml
agent/: Dockerfile  agent.py  pyproject.toml
agent/src/discovery_agent/: configuration.py  graph.py  state.py
agent/src/discovery_agent/nodes/: discover.py  save_question.py
agent/src/discovery_agent/tools/: call_open_search.py  read_from_s3.py  search_in_kb.py
agent/src/discovery_agent/utils/: knowledge.py
infra/: backend.tf  data.tf  iam.tf  main.tf  opensearch.tf  output.tf  variables.tf
infra/scripts/: agentcore_runtime_update_or_create.py
knowledge/: chunking.py
knowledge/scripts/: chunking.py  loading.py  test.py
src/discovery_agent/: __init__.py  configuration.py
src/discovery_agent/nodes/: discover.py
src/discovery_agent/prompts/: discover.py
src/discovery_agent/tools/: search_in_kb.py
test/: streaming_test.py  test.http
