[tool.poetry]
name = "opensearch-agent"
version = "0.1.0"
description = ""
authors = ["torm <tomaszrycz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
boto3 = "^1.39.4"
langchain-aws = "^0.2.28"
langchain-community = "^0.3.27"
opensearch-py = "^3.0.0"
tqdm = "^4.67.1"
boto3-stubs = "^1.39.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
